# bornsim

./: .gitignore  LICENSE  README.md  pyproject.toml
bornsim/: __init__.py  _config.py  adjoint.py  circuit.py  init.py  kernels.py  losses.py  statevec.py  topology.py  trainer.py  utils.py
examples/: generate_v6_otsu.py  train_l6_500.py
examples/performance_test/: _common.py  backend_alternatives_probe.py  bornsim_readme_sweep.py  build_readme_timing_figure.py  estimator_side_probe.py
examples/performance_test/results/: bornsim_readme_sweep_results.json  tensorcircuit_spotcheck.json
tests/bornsim/: __init__.py  conftest.py  test_adjoint.py  test_circuit.py  test_init.py  test_losses.py  test_pennylane_agreement.py  test_trainer.py  test_utils.py
