[project]
name = "bornsim"
version = "0.1.0"
description = "Single-GPU exact Born machine simulator with full-probability adjoint gradients; measured to 28 qubits on 24 GB GPUs."
requires-python = ">=3.12,<3.13"
dependencies = [
    "cupy-cuda12x==14.0.1",
    "cuquantum-python==26.3.2",
    "cuquantum-python-cu12==26.3.2",
    "jax[cuda12]==0.10.0",
    "numpy==2.4.4",
    "optax==0.2.8",
    "scipy==1.17.1",
    "scikit-learn==1.8.0",
]

[project.optional-dependencies]
test = [
    "pennylane==0.44.1",
    "pytest==9.0.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["bornsim*"]
